crates/taudit-cli/tests/snapshots/snapshot_ado__ado_setvariable_all_findings.snap
---
source: crates/taudit-cli/tests/snapshot_ado.rs
expression: findings
---
- severity: high
  category: over_privileged_identity
  nodes_involved:
    - 0
    - 2
    - 4
  message: "System.AccessToken has broad scope (permissions: '') — likely broader than needed"
  recommendation:
    type: reduce_permissions
    current: ""
    minimum: "{ contents: read }"
  source: built-in
  time_to_fix: small
  confidence_scope: yaml_only
  portal_control_dependency: true
  authority_kinds:
    - job_token
- severity: high
  category: self_mutating_pipeline
  nodes_involved:
    - 2
    - 0
    - 3
  message: "Step 'Expose secrets as plain variables' writes to the environment gate while holding authority (System.AccessToken, API_KEY_SECRET) — secrets may leak into pipeline environment"
  recommendation:
    type: manual
    action: Avoid writing secrets or attacker-controlled values to $GITHUB_ENV / $GITHUB_PATH / pipeline variables. Use explicit step outputs with narrow scoping instead.
  source: built-in
  confidence_scope: yaml_only
  portal_control_dependency: true
  authority_kinds:
    - credential_named_variable
    - job_token
  attacker_surface_kinds:
    - script_sink
  cve_relationship: analogue_only
- severity: high
  category: setvariable_issecret_false
  nodes_involved:
    - 2
  message: "ADO setvariable with sensitive name 'API_KEY' uses issecret=false or omits issecret flag, value printed in plaintext logs"
  recommendation:
    type: manual
    action: "Add `issecret=true` to the setvariable directive: `##vso[task.setvariable variable=API_KEY;issecret=true]`"
  source: built-in
  confidence_scope: yaml_only
  portal_control_dependency: true
  attacker_surface_kinds:
    - script_sink
- severity: high
  category: setvariable_issecret_false
  nodes_involved:
    - 2
  message: "ADO setvariable with sensitive name 'MY_TOKEN' uses issecret=false or omits issecret flag, value printed in plaintext logs"
  recommendation:
    type: manual
    action: "Add `issecret=true` to the setvariable directive: `##vso[task.setvariable variable=MY_TOKEN;issecret=true]`"
  source: built-in
  confidence_scope: yaml_only
  portal_control_dependency: true
  attacker_surface_kinds:
    - script_sink
