crates/taudit-cli/tests/snapshots/snapshot_ado__ado_setvariable_finding_1.snap
---
source: crates/taudit-cli/tests/snapshot_ado.rs
expression: finding
---
severity: high
category: self_mutating_pipeline
nodes_involved:
  - 2
  - 0
  - 3
message: "Step 'Expose secrets as plain variables' writes to the environment gate while holding authority (System.AccessToken, API_KEY_SECRET) — secrets may leak into pipeline environment"
recommendation:
  type: manual
  action: Avoid writing secrets or attacker-controlled values to $GITHUB_ENV / $GITHUB_PATH / pipeline variables. Use explicit step outputs with narrow scoping instead.
source: built-in
confidence_scope: yaml_only
portal_control_dependency: true
authority_kinds:
  - credential_named_variable
  - job_token
attacker_surface_kinds:
  - script_sink
cve_relationship: analogue_only
