crates/taudit-cli/tests/snapshots/snapshot_ado__ado_setvariable_finding_2.snap
---
source: crates/taudit-cli/tests/snapshot_ado.rs
expression: finding
---
severity: high
category: setvariable_issecret_false
nodes_involved:
  - 2
message: "ADO setvariable with sensitive name 'API_KEY' uses issecret=false or omits issecret flag, value printed in plaintext logs"
recommendation:
  type: manual
  action: "Add `issecret=true` to the setvariable directive: `##vso[task.setvariable variable=API_KEY;issecret=true]`"
source: built-in
confidence_scope: yaml_only
portal_control_dependency: true
attacker_surface_kinds:
  - script_sink
