crates/taudit-cli/tests/snapshots/snapshot_ado__ado_setvariable_json_report.snap
---
source: crates/taudit-cli/tests/snapshot_ado.rs
assertion_line: 52
expression: json
---
findings:
  - authority_kinds:
      - job_token
    category: over_privileged_identity
    confidence_scope: yaml_only
    finding_group_id: 20b85bf3-15f0-51f9-8fe0-b72433ef5fe0
    fingerprint: d022605254e8be36af8b0f32a7b4fb33
    message: "System.AccessToken has broad scope (permissions: '') — likely broader than needed"
    nodes_involved:
      - 0
      - 2
      - 4
    portal_control_dependency: true
    recommendation:
      current: ""
      minimum: "{ contents: read }"
      type: reduce_permissions
    rule_id: over_privileged_identity
    severity: high
    source: built-in
    suppression_key: sk1_da56761dca6960360598b21cd3aabbee
    time_to_fix: small
  - attacker_surface_kinds:
      - script_sink
    authority_kinds:
      - credential_named_variable
      - job_token
    category: self_mutating_pipeline
    confidence_scope: yaml_only
    cve_relationship: analogue_only
    finding_group_id: 609edbe5-466c-580d-b55d-662e698ebaa7
    fingerprint: bb6e21bf84d118f154727f401f6ee7c5
    message: "Step 'Expose secrets as plain variables' writes to the environment gate while holding authority (System.AccessToken, API_KEY_SECRET) — secrets may leak into pipeline environment"
    nodes_involved:
      - 2
      - 0
      - 3
    portal_control_dependency: true
    recommendation:
      action: Avoid writing secrets or attacker-controlled values to $GITHUB_ENV / $GITHUB_PATH / pipeline variables. Use explicit step outputs with narrow scoping instead.
      type: manual
    rule_id: self_mutating_pipeline
    severity: high
    source: built-in
    suppression_key: sk1_0f21eacc2bf17aecc6aa99328b2e4989
  - attacker_surface_kinds:
      - script_sink
    category: setvariable_issecret_false
    confidence_scope: yaml_only
    finding_group_id: 57686768-3929-5fed-9f6f-68683c7b5263
    fingerprint: 9b80dc3b961177994e47c5a111f2f391
    message: "ADO setvariable with sensitive name 'API_KEY' uses issecret=false or omits issecret flag, value printed in plaintext logs"
    nodes_involved:
      - 2
    portal_control_dependency: true
    recommendation:
      action: "Add `issecret=true` to the setvariable directive: `##vso[task.setvariable variable=API_KEY;issecret=true]`"
      type: manual
    rule_id: setvariable_issecret_false
    severity: high
    source: built-in
    suppression_key: sk1_fe01d68461d853df61ff1b574ec13907
  - attacker_surface_kinds:
      - script_sink
    category: setvariable_issecret_false
    confidence_scope: yaml_only
    finding_group_id: 57686768-3929-5fed-9f6f-68683c7b5263
    fingerprint: 9b80dc3b961177994e47c5a111f2f391
    message: "ADO setvariable with sensitive name 'MY_TOKEN' uses issecret=false or omits issecret flag, value printed in plaintext logs"
    nodes_involved:
      - 2
    portal_control_dependency: true
    recommendation:
      action: "Add `issecret=true` to the setvariable directive: `##vso[task.setvariable variable=MY_TOKEN;issecret=true]`"
      type: manual
    rule_id: setvariable_issecret_false
    severity: high
    source: built-in
    suppression_key: sk1_fe01d68461d853df61ff1b574ec13907
graph:
  completeness: complete
  edges:
    - authority_summary:
        identity_scope: broad
        trust_zone: first_party
      from: 2
      id: 0
      kind: has_access_to
      to: 0
    - from: 2
      id: 1
      kind: has_access_to
      to: 3
    - authority_summary:
        identity_scope: broad
        trust_zone: first_party
      from: 4
      id: 2
      kind: has_access_to
      to: 0
  metadata:
    platform: azure-devops
  nodes:
    - id: 0
      kind: identity
      metadata:
        identity_scope: broad
        implicit: "true"
      name: System.AccessToken
      trust_zone: first_party
    - id: 1
      kind: image
      metadata: {}
      name: ubuntu-latest
      trust_zone: first_party
    - id: 2
      kind: step
      metadata:
        env_gate_writes_secret_value: "true"
        job_name: pipeline
        script_body: "echo \"##vso[task.setvariable variable=MY_TOKEN;issecret=false]$(System.AccessToken)\"\necho \"##vso[task.setvariable variable=API_KEY;issecret=false]$(API_KEY_SECRET)\"\n"
        setvariable_ado: "true"
        writes_env_gate: "true"
      name: Expose secrets as plain variables
      trust_zone: first_party
    - id: 3
      kind: secret
      metadata: {}
      name: API_KEY_SECRET
      trust_zone: first_party
    - id: 4
      kind: step
      metadata:
        job_name: pipeline
        script_body: "echo \"Token is: $MY_TOKEN\"\n"
      name: Use exposed secret
      trust_zone: first_party
  source:
    file: azure-pipelines.yml
schema_uri: "https://taudit.dev/schemas/taudit-report.schema.json"
schema_version: 1.0.0
summary:
  completeness: complete
  critical: 0
  graph_risk_summary:
    authority_roots: 2
    delegation_hops: 0
    mutable_refs: 1
    protected_resource_categories:
      - identity
      - secret
    publication_adjacent_sinks: 0
    untrusted_sinks: 0
  high: 4
  info: 0
  low: 0
  medium: 0
  total_edges: 3
  total_findings: 4
  total_nodes: 5
