crates/taudit-cli/tests/snapshots/snapshot_ado__ado_setvariable_sarif_results.snap
---
source: crates/taudit-cli/tests/snapshot_ado.rs
assertion_line: 66
expression: results
---
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: azure-pipelines.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "System.AccessToken has broad scope \\(permissions: ''\\) — likely broader than needed"
  partialFingerprints:
    primaryLocationLineHash: d022605254e8be36af8b0f32a7b4fb33
    taudit/v1: d022605254e8be36af8b0f32a7b4fb33
  properties:
    authorityKinds:
      - job_token
    confidenceScope: yaml_only
    findingGroupId: 20b85bf3-15f0-51f9-8fe0-b72433ef5fe0
    portalControlDependency: true
    security-severity: "7.5"
    suppressionKey: sk1_da56761dca6960360598b21cd3aabbee
    taudit-source: built-in
    timeToFix: small
  ruleId: over_privileged_identity
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: azure-pipelines.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "Step 'Expose secrets as plain variables' writes to the environment gate while holding authority \\(System.AccessToken, API_KEY_SECRET\\) — secrets may leak into pipeline environment"
  partialFingerprints:
    primaryLocationLineHash: bb6e21bf84d118f154727f401f6ee7c5
    taudit/v1: bb6e21bf84d118f154727f401f6ee7c5
  properties:
    attackerSurfaceKinds:
      - script_sink
    authorityKinds:
      - credential_named_variable
      - job_token
    confidenceScope: yaml_only
    cveRelationship: analogue_only
    findingGroupId: 609edbe5-466c-580d-b55d-662e698ebaa7
    portalControlDependency: true
    security-severity: "7.5"
    suppressionKey: sk1_0f21eacc2bf17aecc6aa99328b2e4989
    taudit-source: built-in
  ruleId: self_mutating_pipeline
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: azure-pipelines.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "ADO setvariable with sensitive name 'API_KEY' uses issecret=false or omits issecret flag, value printed in plaintext logs"
  partialFingerprints:
    primaryLocationLineHash: 9b80dc3b961177994e47c5a111f2f391
    taudit/v1: 9b80dc3b961177994e47c5a111f2f391
  properties:
    attackerSurfaceKinds:
      - script_sink
    confidenceScope: yaml_only
    findingGroupId: 57686768-3929-5fed-9f6f-68683c7b5263
    portalControlDependency: true
    security-severity: "7.5"
    suppressionKey: sk1_fe01d68461d853df61ff1b574ec13907
    taudit-source: built-in
  ruleId: setvariable_issecret_false
- level: error
  locations:
    - physicalLocation:
        artifactLocation:
          uri: azure-pipelines.yml
          uriBaseId: "%SRCROOT%"
  message:
    text: "ADO setvariable with sensitive name 'MY_TOKEN' uses issecret=false or omits issecret flag, value printed in plaintext logs"
  partialFingerprints:
    primaryLocationLineHash: 9b80dc3b961177994e47c5a111f2f391
    taudit/v1: 9b80dc3b961177994e47c5a111f2f391
  properties:
    attackerSurfaceKinds:
      - script_sink
    confidenceScope: yaml_only
    findingGroupId: 57686768-3929-5fed-9f6f-68683c7b5263
    portalControlDependency: true
    security-severity: "7.5"
    suppressionKey: sk1_fe01d68461d853df61ff1b574ec13907
    taudit-source: built-in
  ruleId: setvariable_issecret_false
