crates/taudit-cli/tests/snapshots/snapshot_ado__ado_shared_pool_all_findings.snap
---
source: crates/taudit-cli/tests/snapshot_ado.rs
assertion_line: 76
expression: findings
---
- severity: high
  category: checkout_self_pr_exposure
  nodes_involved:
    - 2
  message: "PR-triggered pipeline checks out the repository at step 'pipeline[0]' — attacker-controlled code from the fork lands on the runner and is readable by all subsequent steps"
  recommendation:
    type: manual
    action: "Use `persist-credentials: false` (GitHub Actions) or `persistCredentials: false` (Azure DevOps) to stop writing the repo token to disk, and avoid reading workspace files in subsequent privileged steps. Consider `checkout: none` or omitting checkout for jobs that only need pipeline config, not source code."
  source: built-in
  time_to_fix: medium
  confidence_scope: yaml_only
  runtime_preconditions:
    - the authority shown in the graph is available to that run
    - untrusted PR or fork-controlled input can reach this workflow at runtime
  portal_control_dependency: true
  attacker_surface_kinds:
    - untrusted_checkout
  cve_relationship: same_authority_shape
- severity: high
  category: over_privileged_identity
  nodes_involved:
    - 0
    - 2
    - 3
  message: "System.AccessToken has broad scope (permissions: '') — likely broader than needed"
  recommendation:
    type: reduce_permissions
    current: ""
    minimum: "{ contents: read }"
  source: built-in
  time_to_fix: small
  confidence_scope: yaml_only
  portal_control_dependency: true
  authority_kinds:
    - job_token
- severity: critical
  category: self_hosted_pool_pr_hijack
  nodes_involved:
    - 1
    - 2
  message: "PR-triggered pipeline uses self-hosted agent pool with checkout:self — enables git hook injection persisting across pipeline runs on the shared runner"
  recommendation:
    type: manual
    action: "Run PR pipelines on Microsoft-hosted (ephemeral) agents, or disable checkout:self for PR-triggered jobs on self-hosted pools"
  source: built-in
  confidence_scope: yaml_only
  runtime_preconditions:
    - the authority shown in the graph is available to that run
    - untrusted PR or fork-controlled input can reach this workflow at runtime
  portal_control_dependency: true
  attacker_surface_kinds:
    - self_hosted_runner
    - untrusted_checkout
  cve_relationship: same_authority_shape
- severity: high
  category: shared_self_hosted_pool_no_isolation
  nodes_involved:
    - 1
  message: "Self-hosted pool 'SharedBuildAgents' has no workspace isolation (workspace: {clean: all/true} not set); a previous pipeline run can pollute the workspace for the next — including privileged deployment jobs"
  recommendation:
    type: manual
    action: "Add `workspace: { clean: all }` to every job that uses a self-hosted pool, or migrate to Microsoft-hosted (ephemeral) agents for untrusted builds."
  source: built-in
  confidence_scope: yaml_only
  portal_control_dependency: true
  attacker_surface_kinds:
    - self_hosted_runner
- severity: high
  category: trigger_context_mismatch
  nodes_involved:
    - 2
    - 3
    - 0
    - 4
    - 5
    - 6
  message: Workflow triggered by pr with secret/identity access — 2 step(s) hold authority that attacker-controlled code could reach
  recommendation:
    type: manual
    action: "Use a separate workflow triggered by workflow_run (not pull_request_target) for privileged operations, or ensure no checkout of the PR head ref occurs before secret use"
  source: built-in
  confidence_scope: yaml_only
  runtime_preconditions:
    - the authority shown in the graph is available to that run
    - untrusted PR or fork-controlled input can reach this workflow at runtime
  portal_control_dependency: true
  authority_kinds:
    - credential_named_variable
    - job_token
    - secret
  attacker_surface_kinds:
    - script_sink
    - untrusted_checkout
  cve_relationship: same_authority_shape
