crates/taudit-cli/tests/snapshots/snapshot_ado__ado_shared_pool_finding_0.snap
---
source: crates/taudit-cli/tests/snapshot_ado.rs
expression: finding
---
severity: high
category: checkout_self_pr_exposure
nodes_involved:
  - 2
message: "PR-triggered pipeline checks out the repository at step 'pipeline[0]' — attacker-controlled code from the fork lands on the runner and is readable by all subsequent steps"
recommendation:
  type: manual
  action: "Use `persist-credentials: false` and avoid reading workspace files in subsequent privileged steps. Consider `checkout: none` for jobs that only need pipeline config, not source code."
source: built-in
time_to_fix: medium
confidence_scope: yaml_only
runtime_preconditions:
  - the authority shown in the graph is available to that run
  - untrusted PR or fork-controlled input can reach this workflow at runtime
portal_control_dependency: true
attacker_surface_kinds:
  - untrusted_checkout
cve_relationship: same_authority_shape
