crates/taudit-cli/tests/snapshots/snapshot_ado__ado_shared_pool_finding_1.snap
---
source: crates/taudit-cli/tests/snapshot_ado.rs
expression: finding
---
severity: high
category: over_privileged_identity
nodes_involved:
  - 0
  - 2
  - 3
message: "System.AccessToken has broad scope (permissions: '') — likely broader than needed"
recommendation:
  type: reduce_permissions
  current: ""
  minimum: "{ contents: read }"
source: built-in
time_to_fix: small
