crates/taudit-cli/tests/snapshots/snapshot_ado__ado_shared_pool_finding_2.snap
---
source: crates/taudit-cli/tests/snapshot_ado.rs
expression: finding
---
severity: critical
category: self_hosted_pool_pr_hijack
nodes_involved:
  - 1
  - 2
message: "PR-triggered pipeline uses self-hosted agent pool with checkout:self — enables git hook injection persisting across pipeline runs on the shared runner"
recommendation:
  type: manual
  action: "Run PR pipelines on Microsoft-hosted (ephemeral) agents, or disable checkout:self for PR-triggered jobs on self-hosted pools"
source: built-in
confidence_scope: yaml_only
runtime_preconditions:
  - the authority shown in the graph is available to that run
  - untrusted PR or fork-controlled input can reach this workflow at runtime
portal_control_dependency: true
attacker_surface_kinds:
  - self_hosted_runner
  - untrusted_checkout
cve_relationship: same_authority_shape
